# src/app/models/product-action-parameter-location.ts
@@ -1,0 +1,4 @@
+export interface ProductActionParameterLocation {
+    location: string;
+    value: string;
+}
