# src/app/models/product-action-parameter-validation.ts
@@ -1,0 +1,4 @@
+export interface ProductActionParameterValidation {
+    regex: string;
+    errorMessage: string;
+}
