# src/app/openapi/api/catalog-item-user-action-message-definitions.serviceInterface.ts
@@ -1,0 +1,47 @@
+/**
+ * Component Catalog REST API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { HttpHeaders }                                       from '@angular/common/http';
+
+import { Observable }                                        from 'rxjs';
+
+import { CatalogItemUserActionMessageDefinition } from '../model/models';
+import { RestErrorMessage } from '../model/models';
+
+
+import { Configuration }                                     from '../configuration';
+
+
+
+export interface CatalogItemUserActionMessageDefinitionsServiceInterface {
+    defaultHeaders: HttpHeaders;
+    configuration: Configuration;
+
+    /**
+     * Get a message definition by id.
+     * Returns an standard message definition 
+     * @param catalogItemId id for the CatalogItem
+     * @param userActionId id for the CatalogItemUserAction
+     * @param messageDefinitionId id for the CatalogItemUserActionMessageDefinition
+     * @param requestBody 
+     */
+    getMessageDefinitionByCatalogItemIdAndMessageId(catalogItemId: string, userActionId: string, messageDefinitionId: string, requestBody: { [key: string]: string; }, extraHttpRequestParams?: any): Observable<CatalogItemUserActionMessageDefinition>;
+
+    /**
+     * Get a message definition by id.
+     * Returns an standard message definition 
+     * @param userActionId id for the CatalogItemUserAction
+     * @param messageDefinitionId id for the CatalogItemUserActionMessageDefinition
+     * @param requestBody 
+     
+     * @deprecated
+     */
+    getMessageDefinitionById(userActionId: string, messageDefinitionId: string, requestBody: { [key: string]: string; }, extraHttpRequestParams?: any): Observable<CatalogItemUserActionMessageDefinition>;
+
+}
