# src/app/openapi/api/schema-validations.serviceInterface.ts
@@ -1,0 +1,33 @@
+/**
+ * Component Catalog REST API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { HttpHeaders }                                       from '@angular/common/http';
+
+import { Observable }                                        from 'rxjs';
+
+import { ValidationResult } from '../model/models';
+
+
+import { Configuration }                                     from '../configuration';
+
+
+
+export interface SchemaValidationsServiceInterface {
+    defaultHeaders: HttpHeaders;
+    configuration: Configuration;
+
+    /**
+     * Validate a yaml against a proper schema.
+     * Validates the provided Catalog schema against the expected format and structure.&lt;br/&gt; Returns a 200 OK response if the schema is valid, otherwise returns a 400 Bad Request with details about the validation errors. 
+     * @param className ClassName for the uploaded file, so we can get proper schema for validation.
+     * @param file 
+     */
+    validateCatalogSchema(className: string, file?: Blob, extraHttpRequestParams?: any): Observable<ValidationResult>;
+
+}
