# src/app/openapi/model/catalog-item-user-action-message-definition.ts
@@ -1,0 +1,22 @@
+/**
+ * Component Catalog REST API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { CatalogItemUserActionMessageType } from './catalog-item-user-action-message-type';
+
+
+export interface CatalogItemUserActionMessageDefinition { 
+    id?: string;
+    type?: CatalogItemUserActionMessageType;
+    title?: string;
+    message?: string;
+}
+export namespace CatalogItemUserActionMessageDefinition {
+}
+
+
