# src/app/openapi/model/catalog-item-user-action-parameter.ts
@@ -1,0 +1,28 @@
+/**
+ * Component Catalog REST API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { CatalogItemUserActionParameterValidation } from './catalog-item-user-action-parameter-validation';
+import { CatalogItemUserActionParameterLocation } from './catalog-item-user-action-parameter-location';
+
+
+export interface CatalogItemUserActionParameter { 
+    name?: string;
+    type?: string;
+    required?: boolean;
+    defaultValue?: string | null;
+    defaultValues?: Array<string> | null;
+    options?: Array<string> | null;
+    locations?: Array<CatalogItemUserActionParameterLocation> | null;
+    label?: string;
+    placeholder?: string | null;
+    hint?: string | null;
+    visible?: boolean;
+    validations?: Array<CatalogItemUserActionParameterValidation> | null;
+}
+
