# src/app/openapi/model/models.ts
@@ -3,7 +3,15 @@ export * from './catalog-descriptor';
 export * from './catalog-item';
 export * from './catalog-item-filter';
 export * from './catalog-item-tag';
+export * from './catalog-item-user-action';
+export * from './catalog-item-user-action-message-definition';
+export * from './catalog-item-user-action-message-type';
+export * from './catalog-item-user-action-parameter';
+export * from './catalog-item-user-action-parameter-location';
+export * from './catalog-item-user-action-parameter-validation';
 export * from './catalog-link';
 export * from './file-format';
 export * from './rest-error-message';
 export * from './sort-order';
+export * from './validation-message';
+export * from './validation-result';
